--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,19 @@
 @article{zhu2022belief,
   title={A Belief-Driven Taylor Rule},
   author={Zhu,Zheliang},
+  abstract={In reality, a central bank does not observe fundamentals within an economy and infor-
+mation dispersion exists among all the sectors. This paper employs a New Keynesian
+dynamic stochastic general equilibrium (DSGE) model with non-nested information
+and extends the information dispersion to all sectors. We study monetary polices with
+internalization of public expectations by means of policy-wise information implemen-
+tation. Theoretically, we show that this implementation determines signal extraction
+processes, dynamics of macro-variables and hence macro-volatility. Numerically, we
+ nd an increasing importance in households' information with an increase in econ-
+omy's information structure complexity. This paper aids in understanding impacts of
+policy-rule information choices .}
   year={2022},
+  pdf={BdTaylor.pdf}
   topic={Monetary Policy}
+  note={working paper},
+  abbr={WP},
 }
