--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 
 @article{zhu2022belief,
   abbr={JMP},
-  bibtex_show={true},
+  bibtex_show={false},
   title={A Belief-Driven Taylor Rule},
   author={Zhu,Zheliang},
   abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in households' information with an increase in economy's information structure complexity. This paper aids in understanding impacts of policy-rule information choices .}
