--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   abbr={WP},
   bibtex_show={false},
   title={ESG Practices and Financing Cost :Evidence from China},
-  author={Fan, Yunpeng and Zshu,Zheliang},
+  author={Fan,Yunpeng and Zhu,Zheliang},
   abstract={It is important to study the relationship between corporate Environmental, Social, and Governance (ESG) practices and their financing costs in China which targets at “Carbon Neutrality” and “Emission Peak”. We find that high ESG performances tend to lower firms' financing costs and ESG disclosure shares a substitution effect with ESG performances in helping reduce financing costs. The impact of ESG performances on financing costs shows heterogeneity in terms of firm ownership, location and industry. We also propose and examine two channels through which ESG performances impact financing costs:(i) better ESG performances lower corporate credit risk and hence mitigate risk premium, (ii) better ESG performances help firms receive more market attention and hence reduce asymmetric information between lenders and borrowers.},
   year={Draft Coming Soon},
   #pdf={BdTaylor.pdf},
@@ -28,7 +28,7 @@
   abbr={InPro},
   bibtex_show={false},
   title={Taylor Rule Regressions with Survey Data},
-  author={Lyu, Leifei and Tan, Fei and Zhu,Zheliang},
+  author={Lyu,Leifei and Tan,Fei and Zhu,Zheliang},
   #abstract={},
   year={Draft Coming Soon},
   #pdf={},
