--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   bibtex_show={false},
   title={A Belief-Driven Taylor Rule:Expectation As a Policy Tool},
   author={Zhu,Zheliang},
-  abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in households' information with an increase in economy's information structure complexity. This paper aids in understanding impacts of policy-rule information choices .},
+  abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in private sectors' information in the context of anchoring public expectations. This paper aids in understanding impacts of policy-rule information choices.},
   year={2022},
   pdf={BdTaylor.pdf},
   topic={Monetary Economics}
@@ -19,18 +19,20 @@
   title={ESG Practices and Financing Cost :Evidence from China},
   author={Fan,Yunpeng and Zhu,Zheliang},
   abstract={It is important to study the relationship between corporate Environmental, Social, and Governance (ESG) practices and their financing costs in China which targets at “Carbon Neutrality” and “Emission Peak”. We find that high ESG performances tend to lower firms' financing costs and ESG disclosure shares a substitution effect with ESG performances in helping reduce financing costs. The impact of ESG performances on financing costs shows heterogeneity in terms of firm ownership, location and industry. We also propose and examine two channels through which ESG performances impact financing costs:(i) better ESG performances lower corporate credit risk and hence mitigate risk premium, (ii) better ESG performances help firms receive more market attention and hence reduce asymmetric information between lenders and borrowers.},
-  note={Draft Coming Soon},
+  #note={Draft Coming Soon},
+  #year={},
   #pdf={BdTaylor.pdf},
   topic={Environmental Economics}
 }
 
 @article{lyutanzhu2022mp,
-  abbr={InPro},
+  abbr={InP},
   bibtex_show={false},
   title={Taylor Rule Regression with Survey Data},
   author={Lyu,Leifei and Tan,Fei and Zhu,Zheliang},
   #abstract={},
-  note={Draft Coming Soon},
+  #year={},
+  #note={Draft Coming Soon},
   #pdf={},
   topic={Monetary Economics}
 }
