--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,15 @@
   pdf={BdTaylor.pdf},
   topic={Monetary Economics}
 }
+
+@article{lyutanzhump,
+  abbr={InPro},
+  bibtex_show={false},
+  title={Taylor Rule Regression with Survey Data},
+  author={Leifei Lyu and Fei Tan and Zheliang Zhu},
+  #abstract={},
+  #year={},
+  #note={Draft Coming Soon},
+  #pdf={},
+  topic={Monetary Economics}
+}
