--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,14 @@
   pdf={BdTaylor.pdf},
   topic={Monetary Economics}
 }
+
+@article{zhu2022belief,
+  abbr={JMP},
+  bibtex_show={false},
+  title={A Belief-Driven Taylor Rule :Expectations As a Policy Tool},
+  author={Zheliang Zhu},
+  abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in private sectors' information in the context of anchoring public expectations. This paper aids in understanding impacts of policy-rule information choices.},
+  year={2022},
+  pdf={BdTaylor.pdf},
+  topic={Monetary Economics}
+}
