--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,9 +18,6 @@
   bibtex_show={false},
   title={Taylor Rule Regression with Survey Data},
   author={Leifei Lyu and Fei Tan and Zheliang Zhu},
-  #abstract={},
-  #year={},
-  #note={Draft Coming Soon},
-  #pdf={},
+  year={Draft Coming Soon},
   topic={Monetary Economics}
 }
