--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
 
 @article{lyutanzhump,
   abbr={InPro},
-  title={Taylor Rule Regression with Survey Data},
+  title={Policy Rule Regressions with Survey Data},
   author={Leifei Lyu and Fei Tan and Zheliang Zhu},
   year={In Progress, Draft Coming Soon},
   topic={Monetary Economics}
