--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   abbr={InPro},
   bibtex_show={true},
   title={A Belief-Driven Taylor Rule :Expectations As a Policy Tool},
-  author={Yunpeng Fan, Fei Tan, Jieran Wu and Zheliang Zhu},
+  author={Yunpeng Fan and Fei Tan and Jieran Wu and Zheliang Zhu},
   abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in private sectors' information in the context of anchoring public expectations. This paper aids in understanding impacts of policy-rule information choices.},
   year={2022},
   pdf={BdTaylor.pdf},
