--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   abbr={InPro},
   bibtex_show={true},
   title={A Belief-Driven Taylor Rule :Expectations As a Policy Tool},
-  author={Yunpeng Fan and Fei Tan and Jieran Wu and Zheliang Zhu},
+  author={Fei Tan and Jieran Wu and Zheliang Zhu},
   abstract={In reality, a central bank does not observe fundamentals within an economy and information dispersion exists among all the sectors. This paper employs a New Keynesian dynamic stochastic general equilibrium (DSGE) model with non-nested information and extends the information dispersion to all sectors. We study monetary polices with internalization of public expectations by means of policy-wise information implementation. Theoretically, we show that this implementation determines signal extraction processes, dynamics of macro-variables and hence macro-volatility. Numerically, we find an increasing importance in private sectors' information in the context of anchoring public expectations. This paper aids in understanding impacts of policy-rule information choices.},
   year={2023, Email for details},
   topic={Monetary Economics}
@@ -20,11 +20,3 @@
   topic={Monetary Economics}
 }
 
-@article{fanzhuesg,
-  abbr={WP},
-  title={ESG Practices and Financing Cost :Evidence from China},
-  author={Yunpeng Fan and Zheliang Zhu},
-  abstract={It is important to study the relationship between corporate Environmental, Social, and Governance (ESG) practices and their financing costs in China which targets at “Carbon Neutrality” and “Emission Peak”. We find that high ESG performances tend to lower firms' financing costs and ESG disclosure shares a substitution effect with ESG performances in helping reduce financing costs. The impact of ESG performances on financing costs shows heterogeneity in terms of firm ownership, location and industry. We also propose and examine two channels through which ESG performances impact financing costs:(i) better ESG performances lower corporate credit risk and hence mitigate risk premium, (ii) better ESG performances help firms receive more market attention and hence reduce asymmetric information between lenders and borrowers.},
-  year={Working Paper, Draft Coming Soon},
-  topic={Environmental Economics}
-}
